[package]
name = "analysis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.81"
indicatif = "0.17.8"
reqwest = { version = "0.11", features = ["blocking"] }
crates_io_api = "0.9.0"
analyzeme = { git = "https://github.com/rust-lang/measureme", branch = "stable" }
cargo_metadata = "0.18.1"

[workspace]

[profile.release]
debug = 1
